Fix Internal Debugger Error when clicking step into too fast

Always wait for a gdb reply (^done or ^running) before sending
the next command. *stopped is not a reply, as ^done will follow
and everything will get out of sync.
Also remove a workaround for handling attach response, as this
had apperently the same problem.

BUG: 274390